<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.opental</groupId>
	<artifactId>opental-core</artifactId>
	<version>0.8.0-SNAPSHOT</version>

	<name>opental-api</name>
	<description>define common api, interfaces and models for opental</description>
	<inceptionYear>2018</inceptionYear>

	<url>https://github.com/vebqa/vebtal-api</url>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<version.jersey>4.0.0-M4</version.jersey>
		<version.jetty>11.0.26</version.jetty>
		<version.slf4j>2.0.17</version.slf4j>
		<version.log4j>2.13.3</version.log4j>
	</properties>

	<scm>
		<url>https://github.com/vebqa/vebtal-api</url>
	</scm>

	<developers>
		<developer>
			<name>Karsten Doerges</name>
			<email>kdoerges@googlemail.com</email>
		</developer>
	</developers>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<plugins>
		<!--
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
					<configuration>
						<resources>
							<resource>
								<directory>src/main/resources</directory>
							</resource>
						</resources>
					</configuration>
				</plugin> -->		
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.13.0</version>
					<configuration>
						<source>21</source>
						<target>21</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>eu.somatik.serviceloader-maven-plugin</groupId>
					<artifactId>serviceloader-maven-plugin</artifactId>
					<version>1.4.0</version>
					<configuration>
						<services>
							<param>org.vebqa.vebtal.TestAdaptionPlugin</param>
						</services>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>generate</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>21.0.9-ea+1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-configuration2</artifactId>
			<version>2.12.0</version>
		</dependency>
		
		<dependency>
    		<groupId>commons-beanutils</groupId>
    		<artifactId>commons-beanutils</artifactId>
    		<version>1.11.0</version>
		</dependency>
		
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.10.2</version>
		</dependency>
		<!--
		<dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
            <version>6.1.0</version>
        </dependency>
        -->
		<!-- Jetty -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${version.jetty}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-util</artifactId>
			<version>${version.jetty}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${version.jetty}</version>
		</dependency>

		<!-- Jersey -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${version.jersey}</version>
			<exclusions>
				<exclusion>
			    	<groupId>org.glassfish.hk2</groupId>
    				<artifactId>osgi-resource-locator</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet</artifactId>
			<version>${version.jersey}</version>
		</dependency>
<!--
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-moxy</artifactId>
			<version>${version.jersey}</version>
		</dependency>
		-->
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>${version.jersey}</version>
		</dependency>
		<dependency>
    		<groupId>jakarta.json</groupId>
    		<artifactId>jakarta.json-api</artifactId>
    		<version>2.1.3</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.20.0</version>
		</dependency>		
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${version.slf4j}</version>
		</dependency>
	</dependencies>
</project>